<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/search">

    <fragment
        android:id="@+id/search"
        android:name="com.donxux.codate.presentation.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/explore"
        android:name="com.donxux.codate.presentation.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/like"
        android:name="com.donxux.codate.presentation.LikeFragment"
        android:label="@string/like_fragment_label"
        tools:layout="@layout/fragment_like" />
    <fragment
        android:id="@+id/chat"
        android:name="com.donxux.codate.presentation.ChatFragment"
        android:label="@string/chat_fragment_label"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/info"
        android:name="com.donxux.codate.presentation.InfoFragment"
        android:label="@string/info_fragment_label"
        tools:layout="@layout/fragment_info" />
</navigation>